[gd_scene load_steps=6 format=3 uid="uid://bjac324wjimts"]

[ext_resource type="Script" path="res://roomba.gd" id="1_eoxgr"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ijkqj"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.05

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y013y"]
height = 0.1
radius = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_e4k1r"]
radius = 0.11

[sub_resource type="SphereShape3D" id="SphereShape3D_bs8d0"]
radius = 0.16

[node name="Roomba" type="Node3D"]

[node name="End" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.295, 0.05, 0)

[node name="Start" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.616, 0.05, 0)

[node name="Roombaa" type="RigidBody3D" parent="." node_paths=PackedStringArray("point_a", "point_b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.353046, 0.125807, 0)
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 2.0
script = ExtResource("1_eoxgr")
point_a = NodePath("../Start")
point_b = NodePath("../End")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Roombaa"]
transform = Transform3D(0.435, 0, 0, 0, 0.435, 0, 0, 0, 0.435, 0.045067, -0.0245383, 0.0290211)
mesh = SubResource("CylinderMesh_ijkqj")
skeleton = NodePath("../MeshInstance3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Roombaa"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0599447, 0)
mesh = SubResource("CylinderMesh_ijkqj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Roombaa"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0336028, 0)
shape = SubResource("CylinderShape3D_y013y")

[node name="Kill_area" type="Area3D" parent="Roombaa"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Roombaa/Kill_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0138695, -0.0996501, 0)
shape = SubResource("SphereShape3D_e4k1r")

[node name="Sucking_area" type="Area3D" parent="Roombaa"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Roombaa/Sucking_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0978018, -0.113979, 0)
shape = SubResource("SphereShape3D_bs8d0")

[connection signal="body_entered" from="Roombaa/Kill_area" to="Roombaa" method="_on_kill_area_body_entered"]
[connection signal="body_entered" from="Roombaa/Sucking_area" to="Roombaa" method="_on_sucking_area_body_entered"]
[connection signal="body_exited" from="Roombaa/Sucking_area" to="Roombaa" method="_on_sucking_area_body_exited"]
